--- a/Ejemplo1/ejemplo2.html
+++ b/Ejemplo1/ejemplo2.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/estilo.css">
 </head>
 <body>
+    <h1>Este es mi titulo<h2>
     <p>Dale click al boton para comenzar el juego</p>
     <button onclick="juego()">Empezar</button>
     <p id="resp"></p>
